# webraw

./: .gitignore  docker-compose.yml  spec-github-pages-webraw.md  spec.md
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/models/: .gitignore  bisenet_face.json  convert_bisenet.py  convert_hdrnet.py  convert_mobilesam.py  convert_nafnet.py  convert_nima.py  convert_restormer.py  hdrnet_enhance.json  mobilesam_decoder.json  mobilesam_encoder.json  nafnet_denoise.json  nima_aesthetic.json  nima_technical.json  restormer_denoise.json
backend/src/: main.rs
backend/src/handlers/: ai.rs  auto_enhance.rs  files.rs  health.rs  jobs.rs  mod.rs  optimize.rs  renders.rs
backend/src/models/: auto_enhance.rs  config.rs  edit_state.rs  error.rs  jobs.rs  mod.rs  optimize.rs
backend/src/services/: ai_proxy.rs  auto_enhance.rs  cache.rs  job_manager.rs  mod.rs  optimize.rs  rate_limiter.rs  render.rs
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ai/: AiEditPanel.tsx
frontend/src/components/common/: AdjustmentSlider.tsx  AppShell.tsx  PanelSection.tsx  SettingsDialog.tsx
frontend/src/components/develop/: DevelopView.tsx  Histogram.tsx  ImageCanvas.tsx
frontend/src/components/export/: ExportDialog.tsx
frontend/src/hooks/: usePreviewRenderer.ts
frontend/src/shaders/: adjustments.glsl  fragment.glsl  vertex.glsl
frontend/src/stores/: editStore.ts  libraryStore.ts  settingsStore.ts
frontend/src/types/: index.ts
wasm-engine/: Cargo.toml  build.sh
wasm-engine/src/: lib.rs
(+10 files in other folders)
